--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,16 @@
     <title>Team Profile Generator</title>
 </head>
 <body>
-    
+    <header>
+        <h1>My Team Profile</h1>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="card">
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
