--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href=".//css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <title>Team Profile Generator</title>
 </head>
@@ -16,7 +16,34 @@
     <section>
         <div class="container">
             <div class="card">
-                
+                <div class="manager">
+                    <p class="name"></p>
+                    <p class="role"></p>
+                    <p class="id"></p>
+                    <p class="phoneNumber"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <div class="engineer">
+                    <p class="name"></p>
+                    <p class="role"></p>
+                    <p class="id"></p>
+                    <p class="github"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <div class="intern">
+                    <p class="name"></p>
+                    <p class="role"></p>
+                    <p class="id"></p>
+                    <p class="school"></p>
+                </div>
             </div>
         </div>
     </section>
